# convention2024

./: .gitignore  Cargo.toml  LICENSE  conf.ron  config.ron  flake.nix  ftvr.py  mini_client.py  readme.md  requirements.txt  screencalc.py
accelerometer_firmware/: platformio.ini
accelerometer_firmware/src/: accelerometer.h  accelerometer_LSM6DR.cpp  accelerometer_QMI8658.cpp  main.cpp
crates/ft_vr/: Cargo.toml
crates/ft_vr/src/: input.rs  main.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: api.rs  lib.rs  unit.rs
crates/game_core/src/unit/: leaderboard.rs  pinentry.rs
crates/input_devices/: Cargo.toml
crates/input_devices/src/: autodetect.rs  drivers.rs  lib.rs
crates/input_devices/src/drivers/: headset_gyroscope.rs
crates/input_devices/src/drivers/headset/: headset_gyroscope.rs  mod.rs
crates/input_devices/src/drivers/swarm/: car.rs  mod.rs  pedal.rs  steering_wheel.rs
crates/messages/: Cargo.toml
crates/messages/src/: file_config.rs  lib.rs
crates/vr_renderer/: Cargo.toml
crates/vr_renderer/shaders/: deform.vert  mandelbrot.glsl
crates/vr_renderer/src/: allocations.rs  buffers.rs  command_buffers.rs  device.rs  image_loader.rs  image_post_processing.rs  lib.rs  mesh.rs  pipeline.rs  profiling.rs  render_settings.rs  rendering.rs  segmentation.rs  shaders.rs  transform.rs
crates/vr_renderer/src/imgstream/: dynamic.rs  mod.rs  static.rs
crates/vr_renderer/src/models/: mod.rs  yolonnx.rs
crates/vr_renderer/src/models/yolo/: mod.rs  model.rs  ort_backend.rs  yolo_result.rs
crates/vr_renderer/src/yolov8/: mod.rs  model.rs
crates/websocket_server/: Cargo.toml
crates/websocket_server/src/: lib.rs
kelda_firmware/: platformio.ini
kelda_firmware/src/: SwOSCLI.cpp  SwOSCLI.h  SwOSCLIParameter.h  cnDevices.h  main.cpp
onnx/: .gitignore  download-models.sh
server/: __init__.py  __main__.py  display.py
vr-viz/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
vr-viz/public/: headset-transformed.glb
vr-viz/src/: App.css  App.tsx  dockviewComponents.tsx  dockviewapi.ts  index.css  main.tsx  processing.ts  state.ts  toasties.ts  types.ts
vr-viz/src/3d/: Headset.tsx
vr-viz/src/3d/models/: headset.gltf
vr-viz/src/components/: ActionButton.tsx  Cmdk.tsx  StatusBar.tsx  Watermark.tsx
vr-viz/src/views/: GyroReadingDisplay.tsx  InferenceConfigurationDisplay.tsx  LeaderboardDisplay.tsx  OptimizerInfoDisplay.tsx  ServoConfigurationDisplay.tsx  Utilities.tsx  VrDistanceConfigurationDisplay.tsx  WheelReadingDisplay.tsx
vrRendererInference/: Makefile  config.toml  cuda-shell.nix  main.py  pyproject.toml  ultralytics-checks.py
