[package]
name = "ft_vr"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
pub-sub.workspace = true

pretty_env_logger = "0.5.0"
tracing = "0.1.40"
tracing-tracy = "0.11.3"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.input_devices]
path = "../input_devices"

[dependencies.vr_renderer]
path = "../vr_renderer"
features = [
#    "fullscreen"
]

[dependencies.websocket_server]
path = "../websocket_server"

[dependencies.messages]
path = "../messages"

[dependencies.game_core]
path = "../game_core"