[package]
name = "input_devices"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
messages = { path = "../messages" }
pub-sub.workspace = true
serialport = "4.3.0"
ftswarm = { version = "0.2.4", features = ["tokio_mutex"] }
ftswarm_serial = "0.2.4"
strum = "0.26.3"
strum_macros = "0.26.4"
async-trait = "0.1.83"
tokio = { version = "1.40.0", features = ["full"] }