[package]
name = "vr_renderer"
version = "0.1.0"
edition = "2021"

[features]
fullscreen = []
int8 = []

[dependencies]
log.workspace = true
ggez.workspace = true
pub-sub.workspace = true
messages = { path = "../messages" }
image = { version = "0.24.7" }
serde = "1.0.202"
ron = "0.8.1"
screen-info = "0.0.1"
imageproc = { version = "0.23.0", default-features = false }
ndarray = { version = "0.15.6" }
ort = { version = "1.16.3", default-features = false, features = ["load-dynamic", "copy-dylibs", "half"] }
rusttype = { version = "0.9", default-features = false }
anyhow = { version = "1.0.75" }
regex = { version = "1.5.4" }
rand = { version = "0.8.5" }
chrono = { version = "0.4.30" }
half = { version = "2.3.1" }
dirs = { version = "5.0.1" }
ureq = { version = "2.9.1" }
itertools = "0.13.0"
rayon = "1.10.0"
tracing = "0.1.40"
tracy-client = "0.17.4"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.30"